<resources>
    <string name="app_name">Home Comforts Control</string>
    <string name="location_title_string">Location: </string>
    <string name="location_value_string">null</string>
    <string name="temp_title_string">Temperature: </string>
    <string name="temp_value_string">null</string>
    <string name="humidity_value_string">null</string>
    <string name="humidity_title_string">Humidity: </string>
    <string name="image_refresh_details">Refresh details</string>
    <string name="heatingMenuString">Heating</string>
    <string name="airConMenuString">Air Conditioning</string>
    <string name="humidifierMenu">Humidifier</string>
    <string name="dehumidifierMenu">Dehumidifier</string>
    <string name="descriptionTitle">Description:</string>
    <string name="heating_system_information">Heating System:</string>
    <string name="heating_state_string"></string>
    <string name="airCon_system_information">Air Con System Information</string>
    <string name="humidifier_information">Humidifier Information</string>
    <string name="dehumidifier_information">Humidifier Information</string>
    <string name="condition_value_string">null</string>
    <string name="condition_title_string">Condition:</string>
    <string name="title_activity_login">login</string>
    <string name="lightsMenu">Lights</string>
    <string name="lights_system_information">Lights:</string>
    <string name="lights_state_string" />
    <string name="heatingAutomationThresholdString">Automation Threshold</string>
    <string name="updateThresholdButtonString">Update Threshold</string>
    <string name="overallControlsMenuString">Overall Controls</string>
    <string name="roomsMenu">Rooms</string>
    <string name="title_activity_rooms">RoomsActivity</string>
    <string name="automationSwitchString">Automate</string>
    <string name="updateStartTimeString">Start Time:</string>
    <string name="updateEndTimeString">End Time:</string>
    <string name="updateTimesButtonString">Update Times</string>
    <string name="utilityRoomMenuString">Utility Room</string>
    <string name="kitchenMenuString">Kitchen</string>
    <string name="bedroomMenuString">Bedroom</string>
    <string name="kettleTextString">Kettle:</string>
    <string name="kettleTemperatureTextString">Temperature:</string>
    <string name="kettleTemperatureValue" />
    <string name="kettleState"></string>
    <string name="ovenTextString">Oven:</string>
    <string name="ovenState" />
    <string name="ovenTemperatureTextString">Temperature:</string>
    <string name="ovenButtonString">Update Temperature</string>
    <string name="toasterLevelTextString">Level:</string>
    <string name="toasterState" />
    <string name="toasterTextString">Toaster:</string>
    <string name="toasterButtonString">Update Level</string>
    <string name="ebTextString">Electric Blanket:</string>
    <string name="ebState" />
    <string name="ebLevelTextString">Level:</string>
    <string name="dryerTextString">Dryer:</string>
    <string name="dryerStateText" />
    <string name="dryerTemperatureTextString">Temperature:</string>
    <string name="dryerButtonString">Update Temperature</string>
</resources>
