<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/location_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/location_title_string"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="8dp"
        android:text="@string/location_value_string"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/location_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/temp_title_string"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/refreshDetails"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toEndOf="@+id/location_value"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temp_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="8dp"
        android:text="@string/temp_value_string"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/temp_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/humidity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/humidity_title_string"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/refreshDetails"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toEndOf="@+id/condition_value"
        app:layout_constraintTop_toBottomOf="@+id/temp_title" />

    <TextView
        android:id="@+id/humidity_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="8dp"
        android:text="@string/humidity_value_string"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/humidity_title"
        app:layout_constraintTop_toBottomOf="@+id/temp_value" />

    <TextView
        android:id="@+id/condition_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/condition_title_string"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_title" />

    <TextView
        android:id="@+id/condition_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="8dp"
        android:text="@string/condition_value_string"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/condition_title"
        app:layout_constraintTop_toBottomOf="@+id/location_value" />

    <ImageView
        android:id="@+id/refreshDetails"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/image_refresh_details"
        android:onClick="syncButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/refresh_icon" />


    <TextView
        android:id="@+id/overallControlsMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="launchOverallControls"
        android:text="@string/overallControlsMenuString"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:fontFamily="@font/catamaran_thin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humidity_title" />

    <TextView
        android:id="@+id/roomsMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="launchRooms"
        android:text="@string/roomsMenu"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:fontFamily="@font/catamaran_thin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overallControlsMenu" />

</android.support.constraint.ConstraintLayout>